<resources>
    <string name="app_name">İETT Metrobüs Takip Sistemi</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>

    <string name="start_point1">Beylikdüzü Sondurak 34BZ</string>
    <string name="start_point2">Beylikdüzü Sondurak 34C</string>
    <string name="start_point3">Avcılar > Söğütlüçeşme</string>
    <string name="start_point4">Cevizlibağ > Beylikdüzü Sondurak</string>
    <string name="start_point5">Zincirlikuyu > Söğütlüçeşme</string>
    <string name="start_point6">Zincirlikuyu > Beylikdüzü Sondurak</string>
    <string name="start_point7">Söğütlüçeşme</string>
    <string name="date_time_default_value">Son Güncellenme Tarihi: 00/00/0000 00:00</string>
    <string name="personal_count_default_value">Toplam: 0</string>
    <string name="Site">https://sourceforge.net/projects/iettmst/files/</string>
</resources>
